Modificar la interfaz realizada en el punto 3 para realizar las modificaciones por ajax.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -28,3 +28,10 @@ edit_task:
     requirements:
         _locale: 'en|es'
         idTask: \d+          
+
+setStateAjax:
+    path:   /setState/{idTask}
+    defaults: { _controller: AppBundle:Todo:setStateAjax, _locale: es }
+    requirements:
+        _locale: 'en|es' 
+        idTask: \d+       
