--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,20 +1,43 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+        AppBundle\Entity\User:
+            id: appbundle.md5password.encoder
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
         main:
+            logout_on_user_change: true
+            pattern:    ^/
             anonymous: ~
+            http_basic: ~
+            provider: our_db_provider
+            form_login:
+                login_path: login
+                check_path: login_check
+                # default_target_path: /inicio
+                default_target_path: /todo/es/list/tasks
+            logout:
+                path: /logout
+                target: /
+
+    access_control:
+        - { path: ^/todo, roles: [ROLE_USER, ROLE_ADMIN ]}
+
+#        dev:
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
+#
+#        main:
+#            anonymous: ~
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
